<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_copy"
        android:orderInCategory="100"
        android:title="@string/action_copy"
        android:icon="@drawable/ic_content_copy_24dp"
        app:showAsAction="always"
        />
    <item
        android:id="@+id/action_cut"
        android:orderInCategory="200"
        android:title="@string/action_cut"
        android:icon="@drawable/ic_content_cut_24dp"
        app:showAsAction="ifRoom"
        />
    <item
        android:id="@+id/action_delete"
        android:orderInCategory="300"
        android:title="@string/action_delete"
        android:icon="@android:drawable/ic_menu_delete"
        app:showAsAction="ifRoom"
        />
</menu>