<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="me.edujtm.tuyo.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_liked_videos"
        android:name="me.edujtm.tuyo.ui.likedvideos.LikedVideosFragment"
        android:label="@string/title_liked_videos"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_search"
        android:name="me.edujtm.tuyo.ui.search.SearchFragment"
        android:label="@string/title_search"
        tools:layout="@layout/fragment_notifications" />
    <fragment
        android:id="@+id/navigation_login"
        android:name="me.edujtm.tuyo.ui.login.LoginFragment"
        android:label="Login"
        tools:layout="@layout/fragment_login" />

</navigation>