<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="me.edujtm.tuyo.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_playlist_items"
        android:name="me.edujtm.tuyo.ui.playlistitems.PlaylistItemsFragment"
        android:label="@string/title_playlist_items"
        tools:layout="@layout/fragment_playlist_items">

        <argument
            android:name="playlistId"
            app:argType="string"
            android:defaultValue="@null"
            app:nullable="true"
            />

        <argument
            android:name="primaryPlaylist"
            app:argType="me.edujtm.tuyo.data.model.PrimaryPlaylist"
            android:defaultValue="LIKED_VIDEOS"
            />
    </fragment>

    <fragment
        android:id="@+id/navigation_search"
        android:name="me.edujtm.tuyo.ui.search.SearchFragment"
        android:label="@string/title_search"
        tools:layout="@layout/fragment_search" />

    <action
        android:id="@+id/action_view_playlist_items"
        app:destination="@id/navigation_playlist_items"
        />

</navigation>